--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.233.207.126:9000</sonar.host.url>
-		<sonar.login>af4d72db08d9cfdf2b46191c4f3b4be61d8b236b</sonar.login>
+		<sonar.host.url>http://3.112.12.90:9000</sonar.host.url>
+		<sonar.login>123456</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
